# sql-synth-agentic-playground

./: .bandit  .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pylintrc  .safety-policy.json  ARCHITECTURE.md  AUTONOMOUS_BACKLOG.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_IMPLEMENTATION_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.production  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PROGRESSIVE_QUALITY_GATES_IMPLEMENTATION_REPORT.md  PROJECT_CHARTER.md  README.md  SECURITY.md  TERRAGON_AUTONOMOUS_ENHANCEMENT_REPORT.md  TERRAGON_AUTONOMOUS_IMPLEMENTATION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  TERRAGON_GENERATION4_COMPLETION_REPORT.md  TERRAGON_IMPLEMENTATION_SUMMARY.md  TERRAGON_PROGRESSIVE_QUALITY_GATES_REPORT.md  TRANSCENDENT_API_DOCUMENTATION.md  TRANSCENDENT_DEPLOYMENT_SCALING_GUIDE.md  TRANSCENDENT_RESEARCH_BREAKTHROUGH_ANALYSIS.md  TRANSCENDENT_TECHNICAL_DOCUMENTATION.md  (+34 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml  security.yml
.github/workflows/: cd.yml  ci.yml  security.yml
.terragon/: README.md  autonomous_executor.py  config.yaml  scheduler.py  start_autonomous.sh  value_discovery_engine.py  value_metrics_reporter.py
config/: alert_rules.yml  otel-collector.yml  performance_config.yml  prometheus.yml
deployment/: production_config.yaml  progressive_quality_gates_deployment.yaml
deployment/kubernetes/: production-deployment.yaml
docs/: API.md  AUTONOMOUS_IMPLEMENTATION_GUIDE.md  CHECKPOINTED_SDLC_IMPLEMENTATION.md  DEPLOYMENT.md  DEVELOPMENT.md  MONITORING.md  PERFORMANCE.md  PRODUCTION_DEPLOYMENT.md  ROADMAP.md  SDLC_ENHANCEMENT_SUMMARY.md  SETUP_REQUIRED.md  SLSA_COMPLIANCE.md
docs/adr/: 001-architecture-decision-langchain.md  002-database-security-strategy.md
docs/status/: execution_report_2025-01-26.md  execution_report_2025-01-27.md  (+1 more)
scripts/: advanced_performance_analyzer.py  advanced_security_scan.py  autonomous_quality_gates.py  collect-metrics.sh  compliance_audit.py  deploy_production.sh  dev_automation.py  generate-sbom.sh  generate_changelog.py  intelligent_automation.py  performance_profiler.py  repo-automation.py  security-hardening.sh  security_scan.py  setup-monitoring.sh  technical_debt_analyzer.py
src/: __init__.py
tests/: conftest.py  test_advanced_features.py  test_autonomous_systems.py  test_benchmark.py  test_core_functionality.py  test_database.py  test_security_validation.py  test_sql_synth.py  test_streamlit_ui.py
(+93 files in other folders)
