[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-synth-agentic-playground"
version = "1.0.0"
description = "NL→SQL translation with eval framework and Streamlit UI"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
ui = ["streamlit>=1.32.0", "pandas>=2.0.0"]
bench = ["sqlite-utils>=3.35"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
